# dashboard-cal

./: .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: install-startup-shortcut.ps1
src/dashboard_cal/: __init__.py  __main__.py  app.py  config.py  theme.py
src/dashboard_cal/auth/: __init__.py  google.py  tokens.py
src/dashboard_cal/services/: __init__.py  calendar.py  photos.py  tasks.py  todos.py  weather.py
src/dashboard_cal/ui/: __init__.py  _util.py  background.py  calendar_view.py  clock.py  event_sheet.py  side_panel.py  tasks_modal.py  weather_strip.py
tests/: test_config.py  test_todos.py
